src/components/InventoryList/InventoryList.scss
@use "../../styles/partials/variables" as *;
@use "../../styles/partials/mixins" as *;

a {
  text-decoration: none;
  color: $interactive-color;
}

.inventory-list {
  background-color: $global-color;
  margin: 0 1rem 0.3125rem;
  border-radius: 0.1875rem;
  box-shadow: 0 0.125rem 0.3125rem $box-shadow;
  top: 8.5rem;
  position: absolute;
  right: 0;
  left: 0;

  @include responsive(tablet) {
    margin: 0 2rem 0.3125rem;
    top: 5.1rem;
  }

  @include responsive(desktop) {
    margin: 0 8.125rem 0.3125rem;
  }

  &__header {
    padding: 2rem 1.5rem 1.5rem;
    display: flex;
    flex-direction: column;
    align-items: left;
    gap: 1rem;
    justify-content: space-between;

    @include responsive(tablet) {
      flex-direction: row;
      padding: 2rem;
    }
  }

  &__heading {
    padding-top: 0;
  }

  &__buttons {
    display: flex;
    flex-direction: column;
    gap: 1rem;

    @include responsive(tablet) {
      flex-direction: row;
    }
  }

  &__search-bar {
    display: flex;
    align-items: center;
    background: $global-color;
    border-radius: 1.25rem;
    padding: 0.5rem 0.75rem;
    width: 100%;
    border: 0.0625rem solid $table-border-color;

    @include responsive(tablet) {
      height: 2.375rem;
      width: 11.5625rem;
      padding: 0.5rem 1rem;
    }
  }

  &__search-text {
    border: none;
    background: transparent;
    outline: none;
    flex-grow: 1;
    @include text-style(0.8125rem, 1.25rem, 400, normal);
  }

  &__search-icon {
    width: 1.25rem;
    height: 1.25rem;
    cursor: pointer;
  }

  &__button {
    background-color: $interactive-color;
    color: $global-color;
    @include text-style(0.8125rem, 1.25rem, 600, normal);
    height: 2.25rem;
    width: 100%;
    padding: 0.5rem 0;
    border: none;
    border-radius: 1.25rem;
    cursor: pointer;
    transition: 0.3s;

    @include responsive(tablet) {
      height: 2.375rem;
      width: 10.5rem;
      padding: 0.5rem 1rem;
      @include text-style(0.875rem, 1.375rem, 600, normal);
    }

    &:hover {
      background-color: $secondary-background-color;
    }
  }
  &__index {
    display: none;

    @include responsive(tablet) {
      display: grid;
      grid-template-columns: 0.95fr 0.95fr 0.85fr 0.5fr 0.75fr 0.5fr;
      padding: 0.75rem 2rem;
      background-color: $primary-background-color;
      text-align: center;
    }
  }

  &__title {
    @include responsive(tablet) {
      display: flex;
      flex-direction: row;
      text-align: center;
      gap: 0.125rem;

      &-text {
        color: $table-text-color;
        text-transform: uppercase;
      }
    }
  }

  &__sort {
    @include responsive(tablet) {
      height: 1rem;
      width: 1rem;
      margin: auto 0;
    }
  }

  &__actions {
    display: flex;
    align-items: center;
    justify-content: space-between;

    @include responsive(tablet) {
      justify-content: unset;
      gap: 1rem;
    }

    @include responsive(desktop) {
      gap: 1rem;
    }
  }

  &__icon {
    cursor: pointer;
  }

  &__container {
    display: flex;
    flex-direction: column;

    @include responsive(tablet) {
    }
  }

  &__item {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 1rem;
    border-top: 0.0625rem solid $table-border-color;

    &:hover {
      background-color: $hover-state;
    }

    @include responsive(tablet) {
      display: grid;
      grid-template-columns: 1.8fr 2fr 0.5fr;
      padding: 1.5rem 2rem;
      gap: 0;
    }
  }

  &__details {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;

    @include responsive(tablet) {
      display: contents;
    }
  }

  &__content {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 1rem;

    @include responsive(tablet) {
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 0;
      gap: 0;
    }

    &--status {
      @include responsive(tablet) {
        grid-template-columns: 0.85fr 0.5fr 0.75fr;
      }
    }
  }

  &__info {
    @include responsive(tablet) {
      display: block;
      height: auto;
      margin: auto 0;
    }
  }

  &__label {
    @include text-style(0.6875rem, 1rem, 600, normal);
    color: $table-text-color;
    text-transform: uppercase;
    margin-bottom: 0.25rem;

    @include responsive(tablet) {
      display: none;
    }
  }

  &__text {
    @include text-style(0.8125rem, 1.25rem, 400, normal);

    @include responsive(tablet) {
      @include text-style(0.875rem, 1.375rem, 400, normal);
    }

    &--category {
      padding-right: 2.5rem;
      @include responsive(tablet) {
        padding-right: 1.125rem;
      }
    }

    &--name {
      padding-right: 2.5rem;
      @include responsive(tablet) {
        padding-right: 0;
      }
      &:hover {
        text-decoration: underline;
      }
    }

    &--instock,
    &--outofstock {
      padding: 0.375rem 0.625rem;
      border-radius: 1.25rem;
      text-transform: uppercase;
      margin-top: 0.25rem;
      @include text-style(0.8125rem, 1.25rem, 600);
      display: inline-block;

      @include responsive(tablet) {
        padding: 0.5rem 0.75rem;
        margin-top: -0.937rem;
      }
    }

    &--instock {
      background-color: rgba(21, 138, 99, 0.07);
      color: $instock-label-color;
    }

    &--outofstock {
      background-color: rgba(201, 69, 21, 0.07);
      color: $error-state-color;
    }
  }
  &__name {
    display: flex;
    flex-direction: row;
    justify-content: start;
    gap: 0.25rem;
  }

  &__actions {
    display: flex;
    align-items: center;
    justify-content: space-between;

    @include responsive(tablet) {
      justify-content: unset;
      gap: 1rem;
    }

    @include responsive(desktop) {
      gap: 1rem;
    }
  }

  &__icon {
    cursor: pointer;
  }
}

